Added Video Editing Portfolio.
Added one more portfolio and cleared extra jpgs.

--- a/portfolio-video-editing.html
+++ b/portfolio-video-editing.html
@@ -88,44 +88,32 @@
                         <div class="portfolio-details-slider swiper">
                             <div class="swiper-wrapper align-items-center">
 
-                                <div class="swiper-slide" data-swiper-autoplay="38000">
-                                    <iframe width=100% height="470" src="https://www.youtube.com/embed/ZnFkr5s33CQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                <div class="swiper-slide" data-swiper-autoplay="190000">
+                                    <iframe width=100% height="470" src="https://www.youtube.com/embed/kMCZrJXqOnA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                 </div>
 
-                                <div class="swiper-slide" data-swiper-autoplay="4000">
-                                    <iframe width=100% height="470" src="https://www.youtube.com/embed/m_5mPRiSx_0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                <div class="swiper-slide" data-swiper-autoplay="162000">
+                                    <iframe width=100% height="470" src="https://www.youtube.com/embed/sFCAVI6nC0A" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                 </div>
 
-                                <div class="swiper-slide" data-swiper-autoplay="6000">
-                                    <iframe width=100% height="470" src="https://www.youtube.com/embed/dTPEC7Gm7l4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                <div class="swiper-slide" data-swiper-autoplay="205000">
+                                    <iframe width=100% height="470" src="https://www.youtube.com/embed/ngBLeUUn-H4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                 </div>
 
                                 <div class="swiper-slide" data-swiper-autoplay="9000">
-                                    <iframe width=100% height="470" src="https://www.youtube.com/embed/sVv2wdKxZgg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                    <iframe width=100% height="470" src="https://www.youtube.com/embed/Ip1i50CBDcY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                 </div>
 
                                 <div class="swiper-slide" data-swiper-autoplay="100000">
-                                    <iframe width=100% height="470" src="https://www.youtube.com/embed/-3s1Evs_xxs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                    <iframe width=100% height="470" src="https://www.youtube.com/embed/W9HyO9eIK_M" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                 </div>
 
-                                <div class="swiper-slide" data-swiper-autoplay="5000">
-                                    <iframe width=100% height="470" src="https://www.youtube.com/embed/F0VZAvQMRNI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                                </div>
-
-                                <div class="swiper-slide" data-swiper-autoplay="7000">
-                                    <iframe width=100% height="470" src="https://www.youtube.com/embed/Fkj3qAuX9UI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                                </div>
-
-                                <div class="swiper-slide" data-swiper-autoplay="7000">
-                                    <iframe width=100% height="470" src="https://www.youtube.com/embed/t29ThXFgwH0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                                </div>
-
-                                <div class="swiper-slide" data-swiper-autoplay="4000">
-                                    <iframe width=100% height="470" src="https://www.youtube.com/embed/eE7G3JPKlkc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                <div class="swiper-slide" data-swiper-autoplay="342000">
+                                    <iframe width=100% height="470" src="https://www.youtube.com/embed/RJ-aA3FmYMc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                 </div>
 
                                 <div class="swiper-slide" data-swiper-autoplay="3000">
-                                    <img height="470" src="assets/img/portfolio/Art_Gallery.webp" alt="3D Art Gallery Concept">
+                                    <iframe width=100% height="470" src="https://www.youtube.com/embed/xwAnmU12-wQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                 </div>
 
                             </div>
@@ -137,10 +125,10 @@
                     <div class="col-lg-4 portfolio-info">
                         <h3 style="padding-top: 12px;"> <strong>Project Information</strong> </h3>
                         <ul>
-                            <li><strong>Category</strong>: Visual Effects</li>
-                            <li><strong>Client</strong>: Self</li>
-                            <li><strong>Project date</strong>: Aug, 2019 - Ongoing</li>
-                            <li><strong>Project URL</strong>: <a href="index.html">priyanuj.com</a></li>
+                            <li><strong>Category</strong>: Video Editing</li>
+                            <li><strong>Client</strong>: Multiple</li>
+                            <li><strong>Project date</strong>: May, 2018 - Ongoing</li>
+                            <li><strong>Project URL</strong>: <a href="index.html">priyanuj.com</a>; <a href="https://fitpage.in">fitpage.in</a></li>
                         </ul>
 
                         <p>
