--- a/index.html
+++ b/index.html
@@ -458,11 +458,8 @@
                         <p><em>Kokrajhar Government College, Kokrajhar, AS, India</em></p>
                         <p>Graduated Higher Secondary School in Science Stream with First Class Marks.</p>
                     </div>
-                    <h3 class="resume-title">Download PDF</h3>
-                    <div class="resume-item">
-                        <h5><a href="assets/Priyanuj-Dey-Resume-June-2022.pdf" target="_blank" rel="nofollow">Download PDF</a></h5>
-                    </div>
                 </div>
+
                 <div class="col-lg-6">
                     <h3 class="resume-title">Professional Experience</h3>
                     <div class="resume-item">
@@ -497,6 +494,13 @@
                                 <li>Works as an in-house Visual Effects Specialist.</li>
                             </ul>
                         </p>
+                    </div>
+                </div>
+
+                <div class="col-lg-6">
+                    <h3 class="resume-title">Download PDF</h3>
+                    <div class="resume-item">
+                        <h5><a href="assets/Priyanuj-Dey-Resume-June-2022.pdf" target="_blank" rel="nofollow">Download PDF</a></h5>
                     </div>
                 </div>
             </div>
