--- a/index.html
+++ b/index.html
@@ -157,6 +157,16 @@
                     <p>
                         I have been working in the media field for at least 4 years now. I have been a part of numerous projects in both fiction as well as non-fiction genres.
                     </p>
+
+                    <h3>
+                        Follow me on Social Media!
+                    </h3>
+
+                    <a href="https://instagram.com/priynju" target="_blank" rel="nofollow" class="instagram"><i class="bi bi-instagram" style="font-size: 1.5em; "></i></a> &nbsp;
+                    <a href="https://facebook.com/priyanujdey" target="_blank" rel="nofollow" class="facebook"><i class="bi bi-facebook" style="font-size: 1.5em;  "></i> </a> &nbsp;
+                    <a href="https://linkedin.com/in/priyanujdey" target="_blank" rel="nofollow" class="linkedin"><i class="bi bi-linkedin" style="font-size: 1.5em; "></i> </a> &nbsp;
+                    <a href="https://www.youtube.com/channel/UCJdPIvjauYzhCCWzHMgpFRQ/about" target="_blank" rel="nofollow" class="youtube"><i class="bi bi-youtube" style="font-size: 1.5em; "></i> </a> &nbsp;
+                    <a href="https://twitter.com/priyanuj_dey" target="_blank" rel="nofollow" class="twitter"><i class="bi bi-twitter" style="font-size: 1.5em; "></i></a>
                 </div>
             </div>
 
@@ -500,7 +510,7 @@
                 <div class="col-lg-6">
                     <h3 class="resume-title">Download PDF</h3>
                     <div class="resume-item">
-                        <h5><a href="assets/Priyanuj-Dey-Resume-June-2022.pdf" target="_blank" rel="nofollow">Download PDF</a></h5>
+                        <h5><a href="assets/Priyanuj-Dey-Resume-June-2022.pdf" target="_blank" rel="nofollow" download="Priyanuj-Dey-Resume">Download PDF</a></h5>
                     </div>
                 </div>
             </div>
@@ -840,6 +850,7 @@
         <a href="https://instagram.com/priynju" target="_blank" rel="nofollow" class="instagram"><i class="bi bi-instagram"></i></a>
         <a href="https://facebook.com/priyanujdey" target="_blank" rel="nofollow" class="facebook"><i class="bi bi-facebook"></i></a>
         <a href="https://linkedin.com/in/priyanujdey" target="_blank" rel="nofollow" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.youtube.com/channel/UCJdPIvjauYzhCCWzHMgpFRQ/about" target="_blank" rel="nofollow" class="youtube"><i class="bi bi-youtube"></i></a>
         <a href="https://twitter.com/priyanuj_dey" target="_blank" rel="nofollow" class="twitter"><i class="bi bi-twitter"></i></a>
     </div>
 
