--- a/index.html
+++ b/index.html
@@ -106,9 +106,10 @@
 
             <div class="social-links">
                 <a href="https://instagram.com/priynju" target="_blank" rel="nofollow" class="instagram"><i class="bi bi-instagram"></i></a>
-                <a href="https://twitter.com/priyanuj_dey" target="_blank" rel="nofollow" class="twitter"><i class="bi bi-twitter"></i></a>
                 <a href="https://facebook.com/priyanujdey" target="_blank" rel="nofollow" class="facebook"><i class="bi bi-facebook"></i></a>
                 <a href="https://linkedin.com/in/priyanujdey" target="_blank" rel="nofollow" class="linkedin"><i class="bi bi-linkedin"></i></a>
+                <a href="https://www.youtube.com/channel/UCJdPIvjauYzhCCWzHMgpFRQ/about" target="_blank" rel="nofollow" class="youtube"><i class="bi bi-youtube"></i> </a>
+                <a href="https://twitter.com/priyanuj_dey" target="_blank" rel="nofollow" class="twitter"><i class="bi bi-twitter"></i></a>
             </div>
 
         </div>
