--- a/index.html
+++ b/index.html
@@ -162,11 +162,13 @@
                         Follow me on Social Media!
                     </h3>
 
-                    <a href="https://instagram.com/priynju" target="_blank" rel="nofollow" class="instagram"><i class="bi bi-instagram" style="font-size: 1.5em; "></i></a> &nbsp;
-                    <a href="https://facebook.com/priyanujdey" target="_blank" rel="nofollow" class="facebook"><i class="bi bi-facebook" style="font-size: 1.5em;  "></i> </a> &nbsp;
-                    <a href="https://linkedin.com/in/priyanujdey" target="_blank" rel="nofollow" class="linkedin"><i class="bi bi-linkedin" style="font-size: 1.5em; "></i> </a> &nbsp;
-                    <a href="https://www.youtube.com/channel/UCJdPIvjauYzhCCWzHMgpFRQ/about" target="_blank" rel="nofollow" class="youtube"><i class="bi bi-youtube" style="font-size: 1.5em; "></i> </a> &nbsp;
-                    <a href="https://twitter.com/priyanuj_dey" target="_blank" rel="nofollow" class="twitter"><i class="bi bi-twitter" style="font-size: 1.5em; "></i></a>
+                    <div class="social_small">
+                        <a href="https://instagram.com/priynju" target="_blank" rel="nofollow" class="instagram"><i class="bi bi-instagram" style="font-size: 1.5em; "></i></a> &nbsp;
+                        <a href="https://facebook.com/priyanujdey" target="_blank" rel="nofollow" class="facebook"><i class="bi bi-facebook" style="font-size: 1.5em;  "></i> </a> &nbsp;
+                        <a href="https://linkedin.com/in/priyanujdey" target="_blank" rel="nofollow" class="linkedin"><i class="bi bi-linkedin" style="font-size: 1.5em; "></i> </a> &nbsp;
+                        <a href="https://www.youtube.com/channel/UCJdPIvjauYzhCCWzHMgpFRQ/about" target="_blank" rel="nofollow" class="youtube"><i class="bi bi-youtube" style="font-size: 1.5em; "></i> </a> &nbsp;
+                        <a href="https://twitter.com/priyanuj_dey" target="_blank" rel="nofollow" class="twitter"><i class="bi bi-twitter" style="font-size: 1.5em; "></i></a>
+                    </div>
                 </div>
             </div>
 
