--- a/portfolio-video-editing.html
+++ b/portfolio-video-editing.html
@@ -128,11 +128,11 @@
                             <li><strong>Category</strong>: Video Editing</li>
                             <li><strong>Client</strong>: Multiple</li>
                             <li><strong>Project date</strong>: May, 2018 - Ongoing</li>
-                            <li><strong>Project URL</strong>: <a href="index.html">priyanuj.com</a>; <a href="https://fitpage.in">fitpage.in</a></li>
+                            <li><strong>Project URL</strong>: <a href="index.html">priyanuj.com</a>; <a href="https://fitpage.in"> fitpage.in</a></li>
                         </ul>
 
                         <p>
-                            This section is dedicated for all the works I've done as part of my course in Whistling Woods International as well as practice works to learn new ways to work on the different fields of VFX.
+                            This section is dedicated for all the major video editing works I have done in my past.
                         </p>
                     </div>
 
