--- a/portfolio-video-editing.html
+++ b/portfolio-video-editing.html
@@ -83,7 +83,7 @@
                 <div class="row">
 
                     <div class="col-lg-8">
-                        <h2 class="portfolio-title">Visual Effects Portfolio</h2>
+                        <h2 class="portfolio-title">Video Editing Portfolio</h2>
 
                         <div class="portfolio-details-slider swiper">
                             <div class="swiper-wrapper align-items-center">
