--- a/index.html
+++ b/index.html
@@ -581,6 +581,14 @@
                     </div>
                 </div>
 
+                <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
+                    <div class="icon-box">
+                        <div class="icon"><i class="bx bx-camera"></i></div>
+                        <h4><a>Mobile App Promo</a></h4>
+                        <p>Create breathtaking mobile application promo videos to grab more customers.</p>
+                    </div>
+                </div>
+
                 <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
                     <div class="icon-box">
                         <div class="icon"><i class="bx bx-color-fill"></i></div>
